fixed project styles, deleted fave classes

--- a/atlantis.html
+++ b/atlantis.html
@@ -19,7 +19,7 @@
   		Fall 2017 | Interaction Design Overview | <a href="https://www.youtube.com/watch?v=gH_H0uQTa00&feature=youtu.be" target="_blank">Video</a>
   	</div>
   	
-  	<div id="atlantis">
+  	<div id="atlantis" class="margin-small">
 	  	<div class="content">
 			<div class="summary">
 				<div class="subheader2">Context</div>
@@ -30,9 +30,7 @@
 			<div class="summary">
 				<div class="subheader2">Team</div>
 				This was an individual project.
-			</div>
 			
-			<div class="summary">
 				<div class="subheader2">Skills</div> 
 					<li>Information architecture</li> 
 					<li>Data analysis</li>
@@ -47,11 +45,11 @@
 			<div class="summary">
 				<div class="subheader2">Problem Statement</div> 
 					Locals of the San Juan Islands want to be able to utilize a display to plan their day trips, traveling businesspeople want to be able to plan their trips around weather, and the manager of the transportation company wants to advertise the PTF pass, a pass that bundles multiple trips for a better deal.
-				<div class="subheader2">Project Vision</div>
+<!-- 				<div class="subheader2">Project Vision</div>
 					My design addresses the needs of my users and stakeholders by providing clear, quick, visually appealing information.
 					<p>1)  The PTF pass is highlighted.</p>
 					<p>2)  Relevant information for frequent and spontaneous travelers like weather and a timeline are provided.</p>
-					<p>3)  Novice travelers can also use this display easily by looking at the map and the clear data tables.</p>
+					<p>3)  Novice travelers can also use this display easily by looking at the map and the clear data tables.</p> -->
 	  		</div>
 	  	</div>
 
