--- a/chess.html
+++ b/chess.html
@@ -21,12 +21,11 @@
   	<div id="chess" class="margin-small">
 	  	<div class="content">
 			<div class="summary">
-				<div class="subheader2">Context
-				</div>This project was completed throughout Application Design and Development (67-272), a core course of the IS curriculum. This class provides students with the concepts and techniques to design and develop software applications, and to understand the design process.</div>
+				<div class="subheader2">Context</div>
+				This project was completed throughout Application Design and Development (67-272), a core course of the IS curriculum. This class provides students with the concepts and techniques to design and develop software applications, and to understand the design process.
+			</div>
 			
-			<div class="summary"><div class="subheader2">Team</div>This was an individual project throughout the entire semester.</div>
-			
-			<div class="summary">
+			<div class="summary"><div class="subheader2">Team</div>This was an individual project throughout the entire semester.
 				<div class="subheader2">Skills</div> 
 					<li>Entity Relationship Diagrams</li> 
 					<li>Wireframing</li>
