--- a/chutzpow.html
+++ b/chutzpow.html
@@ -24,21 +24,24 @@
 			
 			<div class="summary"><div class="subheader2">Context</div>Every IS major takes the Information Systems Consulting Project course during their Junior Spring. Through this course, students design and implement a usable information system for a client. My team worked with The Holocaust Center of Pittsburgh. <p>Located in Greenfield, the Holocaust Center is a multi-purpose hub for education, events, art, and more. Its mission is to inspire engagement with the history of the Holocaust and to connect with it today. </p> <p> The center provides sixteen different programs, ranging from speaker series to internships to short-term exhibits. Their visitors are mainly student groups who visit the center on  eld trips as well as Holocaust survivors and the greater Jewish community.</p></div>
 			
-			<div class="summary"><div class="subheader2">Team</div>I worked with two other IS juniors: Kenny Cohen and Sean Park. I took on the role of UX Designer and Frontend Engineer, Kenny served as the scrum master and Full Stack Developer, and Sean was the designer of the platform’s structure and core experience as well as a Full Stack Developer</div>
-			
 			<div class="summary">
+
+			<div class="subheader2">Team</div>
+				I worked with two other IS juniors: Kenny Cohen and Sean Park. I took on the role of UX Designer and Frontend Engineer, Kenny served as the scrum master and Full Stack Developer, and Sean was the designer of the platform’s structure and core experience as well as a Full Stack Developer
+			
 			<div class="subheader2">Skills</div> 
-			<li>Building Client Relationships</li>
-			<li>Project Management</li> 
-			<li>Agile Development Methodology</li>
-			<li>Wireframing</li> 
-			<li>Prototyping</li>
-			<li>Development</li> 
+				<li>Building Client Relationships</li>
+				<li>Project Management</li> 
+				<li>Agile Development Methodology</li>
+				<li>Wireframing</li> 
+				<li>Prototyping</li>
+				<li>Development</li> 
+			
 			<div class="subheader2">Tools/Technology</div> 
-			<li>Adobe XD</li>
-			<li>Ruby on Rails</li> 
-			<li>HTML/CSS</li> 
-			<li>JavaScript</li>
+				<li>Adobe XD</li>
+				<li>Ruby on Rails</li> 
+				<li>HTML/CSS</li> 
+				<li>JavaScript</li>
 			</div>
 			
 			<div class="summary"><div class="subheader2">Problem Statement</div> 
@@ -153,7 +156,7 @@
 	  	</div>
 
 	</div>
-
+	<img src="pics/arrow.png" id="arrow-up" onclick="slideUp()">
   </body>
   <script src="js/general.js"></script>
 
