--- a/index.html
+++ b/index.html
@@ -36,25 +36,13 @@
     <div id="about" class="section margin-small">
       <div id="about-me">
         <div id="about-title">About Me</div>
-        <div class="about-text">I am an incoming senior at Carnegie Mellon University studing Information Systems and Human-Computer Interaction.</div>
-        <div class="about-text">In my free time, I like to run half marathons, cook Blue Apron boxes, and fantasize about owning a Corgi.</div>
-        <div class="about-text">I’ll be interning at Deloitte this summer as a Business Technology Analyst in Arlington, VA!</div>
-      </div>
-
-      <div id="fave-classes" class="section">
-        <div id=faves-title>Favorite Classes</div>
-        <ul style="list-style-type:disc">
-          <li>Interaction Design Overview</li>
-          <li>Designing Human-Centered Software</li>
-          <li>Application Design and Development</li>
-          <li>Organizational Intelligence</li>
-          <li>Body Politics: Women and Health in America</li>
-          <li>Principles of Imperative Computation</li>
-        </ul>
+        <div class="about-text">
+          I am an incoming senior at Carnegie Mellon University studing Information Systems and Human-Computer Interaction. In my free time, I like to run half marathons, cook, and fantasize about owning a Corgi. I’ll be interning at <a href="https://www2.deloitte.com/us/en/footerlinks/office-locator/virginia/arlington.html">Deloitte</a> this summer as a Business Technology Analyst in Arlington, VA!
+        </div>
       </div>
     </div>
 
-    <div id="skills" class="section">
+    <div id="skills">
       
       <div id="title">I have experience with</div>
       <div class="divider"></div>
