--- a/miles.html
+++ b/miles.html
@@ -20,9 +20,7 @@
 	  	<div class="content">
 			<div class="summary"><div class="subheader2">Context</div>The task was to design a conversational interface (e.g. Siri, Alexa) that would be integrated with a self driving car. The assignment was left very open-ended, and we had jurisdiction over specific users to target and areas to focus on.</div>
 			
-			<div class="summary"><div class="subheader2">Team</div>I was place in an interdisciplinary team of four.</div>
-			
-			<div class="summary">
+			<div class="summary"><div class="subheader2">Team</div>I was place in an interdisciplinary team of four.
 			<div class="subheader2">Skills</div> 
 			<li>User stories</li> 
 			<li>Ecosystem collection</li>
