--- a/zensors.html
+++ b/zensors.html
@@ -16,44 +16,46 @@
 	</div>
   	<div class="page-title">Zensors</div>
   	<div class="project-info">Spring 2018 | Social Web</div>
-  	<div class="content margin-small">
-		<div class="summary"><div class="subheader2">Context</div>Lorem ipsum...</div>
-		
-		<div class="summary"><div class="subheader2">Team</div>Lorem ipsum...</div>
-		
-		<div class="summary">
-		<div class="subheader2">Skills</div> 
-		<li>Lorem ipsum...</li> 
-		<div class="subheader2">Tools</div> 
-		<li>Lorem ipsum...</li>
-		</div>
-		
-		<div class="summary"><div class="subheader2">Problem Statement</div> 
-		Lorem ipsum...
-		<div class="subheader2">Project Vision</div>
-		Lorem ipsum...
-		</div>
-  	</div>
+  	<div id="zensors" class="margin-small">
+	  	<div class="content">
+			<div class="summary"><div class="subheader2">Context</div>Lorem ipsum...</div>
+			
+			<div class="summary">
+				<div class="subheader2">Team</div>
+				Lorem ipsum...
+				<div class="subheader2">Skills</div> 
+					<li>Lorem ipsum...</li> 
+				<div class="subheader2">Tools</div> 
+					<li>Lorem ipsum...</li>
+			</div>
+			
+			<div class="summary"><div class="subheader2">Problem Statement</div> 
+			Lorem ipsum...
+			<div class="subheader2">Project Vision</div>
+			Lorem ipsum...
+			</div>
+	  	</div>
 
-  	<div class="page-title">Process</div>
-  	<div class="process-overview margin-small">
+	  	<div class="page-title">Final Product</div>
+	  	<div>
+	  		<div class="final-product-text">
+	  			View the full prototype <a href="website" target="_blank">here!</a> Selected screens are below:
+	  		</div>
+	  		<img class="product-pic" src="whatever">
+	  		<div class="caption">This is a caption</div>
+	  	</div>
 
-		<button class="accordion">Something</button>
-		<div class="panel">
-		  <p>Lorem ipsum...	
-		</div>
-  	</div>
+	  	<div class="page-title">Process</div>
+	  	<div class="process-overview">
 
-  	<div class="page-title">Final Product</div>
-  	<div class="margin-small">
-  		<div class="final-product-text">
-  			View the full prototype <a href="website" target="_blank">here!</a> Selected screens are below:
-  		</div>
-  		<img class="product-pic" src="whatever">
-  		<div class="caption">This is a caption</div>
-  	</div>
+			<button class="accordion">Something</button>
+			<div class="panel">
+			  <p>Lorem ipsum...	
+			</div>
+	  	</div>
 
-  	<img src="pics/arrow.png" id="arrow-up" onclick="slideUp()">
+	  	<img src="pics/arrow.png" id="arrow-up" onclick="slideUp()">
+	</div>
   </body>
 
   <script src="js/general.js"></script>
