zensors done for now

--- a/atlantis.html
+++ b/atlantis.html
@@ -14,7 +14,7 @@
 		<div class="page-nav-item center" onclick="openPage('index.html')">HOME</div>
 		<div class="page-nav-item right" onclick="openPage('chess.html')">CHESS STORE ></div>
 	</div>
-  	<div class="page-title">Atlantis</div>
+  	<div class="page-title">Atlantis Transportation Hub</div>
   	<div class="project-info">
   		Fall 2017 | Interaction Design Overview | <a href="https://www.youtube.com/watch?v=gH_H0uQTa00&feature=youtu.be" target="_blank">Video</a>
   	</div>
