--- a/index.html
+++ b/index.html
@@ -27,7 +27,9 @@
       <img src="pics/background.png" id="home-background">
       <div id="home-text">
         <div id="home-text-title">Hello!</div>
-        <div id="home-text-description">My name is Emily, and I care about improving people’s lives with technology.</div>
+        <div id="home-text-description">
+          My name is Emily Porat, and I care about improving people’s lives with technology.
+        </div>
       </div>
       <img src="pics/arrow.png" id="arrow-down" onclick="slideDown()">
     </div>
@@ -37,7 +39,13 @@
       <div id="about-me">
         <div id="about-title">About Me</div>
         <div class="about-text">
-          I am an incoming senior at Carnegie Mellon University studing Information Systems and Human-Computer Interaction. In my free time, I like to run half marathons, cook, and fantasize about owning a Corgi. I’ll be interning at <a href="https://www2.deloitte.com/us/en/footerlinks/office-locator/virginia/arlington.html">Deloitte</a> this summer as a Business Technology Analyst in Arlington, VA!
+          <p>
+          I am an incoming senior at Carnegie Mellon University studying <a href="https://www.cmu.edu/information-systems/">Information Systems</a> and <a href="https://www.hcii.cmu.edu/">Human-Computer Interaction</a>. I have a technical background, but I am a designer and consultant at heart. My CS/Software side provides frameworks for solving complex problems and helps me understand how technology works, while my Design and Social Science knowledge helps me understand how people work. All in all, my interdisciplinary education has focused on how people, process, and technology intertwine. 
+          </p>
+          <p>
+          In my free time, I like to run half marathons, cook, and fantasize about owning a Corgi. I’ll be interning at <a href="https://www2.deloitte.com/us/en/footerlinks/office-locator/virginia/arlington.html">Deloitte</a> this summer as a Business Technology Analyst in Arlington, VA! 
+          </p>
+          <div class="line"></div>
         </div>
       </div>
     </div>
@@ -65,7 +73,7 @@
       </div>
     </div>
 
-    <div id="projects-title">PROJECTS</div>
+    <div id="projects-title">Projects</div>
     <div id="projects" class="margin-small">
 
       <div class="project section" onclick="openPage('newstagram.html')">
