--- a/zensors.html
+++ b/zensors.html
@@ -15,28 +15,41 @@
 		<div class="page-nav-item right" onclick="openPage('upark.html')">UPARK ></div>
 	</div>
   	<div class="page-title">Zensors</div>
-  	<div class="project-info">Spring 2018 | Social Web</div>
+  	<div class="project-info">Spring 2018 | HCI Undergraduate Research | <a href="https://www.zensors.com/">Website</a> </div>
   	<div id="zensors" class="margin-small">
 	  	<div class="content">
-			<div class="summary"><div class="subheader2">Context</div>Lorem ipsum...</div>
+			<div class="summary"><div class="subheader2">Context</div>
+				<p>“Smart” appliances with built-in cameras, such as the NestCam and Amazon Echo Show, are becoming more pervasive. They hold the promise of bringing high fidelity, contextually rich sensing into our homes, workplaces and neighborhoods. Despite recent and impressive advances, computer vision sys-tems are still limited in the types of questions they can answer, and more importantly, do not immediately generalize acrossdiverse human environments. </p>
+				<p>In response, researchers have investigated hybrid crowd and AI-powered methods that collect human labels to bootstrap automatic processes. However,deployments have been small and mostly confined to institutional settings, leaving open questions about scalability and generality of the approach.</p>
+
+			</div>
 			
 			<div class="summary">
 				<div class="subheader2">Team</div>
-				Lorem ipsum...
+					I worked with several developers and designers, most of whom were HCI Masters/PHD students.
 				<div class="subheader2">Skills</div> 
-					<li>Lorem ipsum...</li> 
-				<div class="subheader2">Tools</div> 
-					<li>Lorem ipsum...</li>
+					<li>Personas</li> 
+					<li>Scenarios</li> 
+					<li>User Stories</li> 
+					<li>Wireframing</li> 
+					<li>Prototyping</li> 
+					<li>User Testing</li> 
+				<div class="subheader2">Tools/Technology</div> 
+					<li>Adobe XD</li>
+					<li>Mechanical Turk</li>
+					<li>React</li>
+					<li>TypeScript</li>
+					<li>HTML/CSS</li>
 			</div>
 			
 			<div class="summary"><div class="subheader2">Problem Statement</div> 
-			Lorem ipsum...
+				The current system relies on a crowdworker interface (similar to Mechanical Turk) for labeling images. The existing interface has several issues. First, there is no way to communicate what is wrong with an image or question when the crowdworker has low confidence. Second, the user gets very little feedback. Third, users are shown an entire uncropped (often low-quality) region of an image. 
 			<div class="subheader2">Project Vision</div>
-			Lorem ipsum...
+				In redesigning this interface, I wanted to address these issues and create a labeling interface that is simple to use, but also improves accuracy and speed of answering.
 			</div>
 	  	</div>
 
-	  	<div class="page-title">Final Product</div>
+<!-- 	  	<div class="page-title">Final Product</div>
 	  	<div>
 	  		<div class="final-product-text">
 	  			View the full prototype <a href="website" target="_blank">here!</a> Selected screens are below:
@@ -52,7 +65,7 @@
 			<div class="panel">
 			  <p>Lorem ipsum...	
 			</div>
-	  	</div>
+	  	</div> -->
 
 	  	<img src="pics/arrow.png" id="arrow-up" onclick="slideUp()">
 	</div>
