updated mobile styles

--- a/atlantis.html
+++ b/atlantis.html
@@ -9,11 +9,13 @@
   </head>
 
   <body>
+  <meta name="viewport" content="width=device-width">
 	<div class="page-nav">
-		<div class="page-nav-item left" onclick="openPage('miles.html')">< MILES</div>
+		<div class="page-nav-item left" onclick="openPage('miles.html')">< <div class="nav-text">MILES</div></div>
 		<div class="page-nav-item center" onclick="openPage('index.html')">HOME</div>
-		<div class="page-nav-item right" onclick="openPage('chess.html')">CHESS STORE ></div>
+		<div class="page-nav-item right" onclick="openPage('chess.html')"><div class="nav-text">CHESS STORE</div> ></div>
 	</div>
+	<div class="nav-space"></div>
   	<div class="page-title">Atlantis Transportation Hub</div>
   	<div class="project-info">
   		Fall 2017 | Interaction Design Overview | <a href="https://www.youtube.com/watch?v=gH_H0uQTa00&feature=youtu.be" target="_blank">Video</a>
@@ -148,9 +150,8 @@
 			</div>
 
 	  	</div>
-
-	  	<img src="pics/arrow.png" id="arrow-up" onclick="slideUp()">
 	</div>
+	</meta>
   </body>
 
   <script src="js/general.js"></script>
