--- a/chutzpow.html
+++ b/chutzpow.html
@@ -8,11 +8,13 @@
   </head>
 
   <body>
+  <meta name="viewport" content="width=device-width">
 	<div class="page-nav">
-		<div class="page-nav-item left" onclick="openPage('newstagram.html')">< NEWSTAGRAM</div>
+		<div class="page-nav-item left" onclick="openPage('newstagram.html')">< <div class="nav-text">NEWSTAGRAM</div></div>
 		<div class="page-nav-item center" onclick="openPage('index.html')">HOME</div>
-		<div class="page-nav-item right" onclick="openPage('zensors.html')">ZENSORS ></div>
+		<div class="page-nav-item right" onclick="openPage('zensors.html')"><div class="nav-text">ZENSORS</div> ></div>
 	</div>
+	<div class="nav-space"></div>
   	<div class="page-title">Chutz-Pow!</div>
   	<div class="project-info">
   		Spring 2018 | Information Systems Consulting Project | <a href="http://www.chutz-pow.org" target="_blank" ">Website</a>
@@ -156,7 +158,7 @@
 	  	</div>
 
 	</div>
-	<img src="pics/arrow.png" id="arrow-up" onclick="slideUp()">
+	</meta>
   </body>
   <script src="js/general.js"></script>
 
