--- a/miles.html
+++ b/miles.html
@@ -9,11 +9,13 @@
   </head>
 
   <body>
+  <meta name="viewport" content="width=device-width">
 	<div class="page-nav">
-		<div class="page-nav-item left" onclick="openPage('upark.html')">< UPARK</div>
+		<div class="page-nav-item left" onclick="openPage('upark.html')">< <div class="nav-text">UPARK</div></div>
 		<div class="page-nav-item center" onclick="openPage('index.html')">HOME</div>
-		<div class="page-nav-item right" onclick="openPage('atlantis.html')">ATLANTIS ></div>
+		<div class="page-nav-item right" onclick="openPage('atlantis.html')"><div class="nav-text">ATLANTIS</div> ></div>
 	</div>
+	<div class="nav-space"></div>
 	<div id="miles" class="margin-small">
 	  	<div class="page-title">Miles</div>
 	  	<div class="project-info">Fall 2017 | Interaction Design Overview | <a href="https://www.youtube.com/watch?v=uT68SYJpt50">Video</a></div>
@@ -171,9 +173,8 @@
 				</p>
 			</div>
 	  	</div>
-
-	  	<img src="pics/arrow.png" id="arrow-up" onclick="slideUp()">
 	  </div>
+	  </meta>
   </body>
 
   <script src="js/general.js"></script>
