--- a/upark.html
+++ b/upark.html
@@ -9,11 +9,13 @@
   </head>
 
   <body>
+  <meta name="viewport" content="width=device-width">
 	<div class="page-nav">
-		<div class="page-nav-item left" onclick="openPage('zensors.html')">< ZENSORS</div>
+		<div class="page-nav-item left" onclick="openPage('zensors.html')">< <div class="nav-text">ZENSORS</div></div>
 		<div class="page-nav-item center" onclick="openPage('index.html')">HOME</div>
-		<div class="page-nav-item right" onclick="openPage('miles.html')">MILES ></div>
+		<div class="page-nav-item right" onclick="openPage('miles.html')"><div class="nav-text">MILES</div> ></div>
 	</div>
+	<div class="nav-space"></div>
 	<div id="upark" class="margin-small">
 	  	<div class="page-title">UPark</div>
 	  	<div class="project-info">Fall 2017 | Interaction Design Overview | <a href="https://xd.adobe.com/view/e6f7478c-22bb-4439-af47-3c3a3976e3d0/screen/0e7bd19b-2882-4232-8812-af53c774a6e8/Reservations-Upcoming/">Prototype</a></div>
@@ -148,9 +150,8 @@
 			</div>
 
 	  	</div>
-
-	  	<img src="pics/arrow.png" id="arrow-up" onclick="slideUp()">
 	  </div>
+	 </meta>
   </body>
 
   <script src="js/general.js"></script>
