--- a/zensors.html
+++ b/zensors.html
@@ -9,11 +9,13 @@
   </head>
 
   <body>
+  <meta name="viewport" content="width=device-width">
 	<div class="page-nav">
-		<div class="page-nav-item left" onclick="openPage('chutzpow.html')">< CHUTZ-POW</div>
+		<div class="page-nav-item left" onclick="openPage('chutzpow.html')">< <div class="nav-text">CHUTZ-POW</div></div>
 		<div class="page-nav-item center" onclick="openPage('index.html')">HOME</div>
-		<div class="page-nav-item right" onclick="openPage('upark.html')">UPARK ></div>
+		<div class="page-nav-item right" onclick="openPage('upark.html')"><div class="nav-text">UPARK</div> ></div>
 	</div>
+	<div class="nav-space"></div>
   	<div class="page-title">Zensors</div>
   	<div class="project-info">Spring 2018 | HCI Undergraduate Research | <a href="https://www.zensors.com/">Website</a> </div>
   	<div id="zensors" class="margin-small">
@@ -67,8 +69,8 @@
 			</div>
 	  	</div> -->
 
-	  	<img src="pics/arrow.png" id="arrow-up" onclick="slideUp()">
 	</div>
+	</meta>
   </body>
 
   <script src="js/general.js"></script>
