--- a/chess.html
+++ b/chess.html
@@ -9,11 +9,13 @@
   </head>
 
   <body>
+  	<meta name="viewport" content="width=device-width">
 	<div class="page-nav">
-		<div class="page-nav-item left" onclick="openPage('atlantis.html')">< ATLANTIS</div>
+		<div class="page-nav-item left" onclick="openPage('atlantis.html')">< <div class="nav-text">ATLANTIS</div></div>
 		<div class="page-nav-item center" onclick="openPage('index.html')">HOME</div>
-		<div class="page-nav-item right" onclick="openPage('index.html')">HOME ></div>
+		<div class="page-nav-item right" onclick="openPage('index.html')"><div class="nav-text">HOME</div> ></div>
 	</div>
+	<div class="nav-space"></div>
   	<div class="page-title">Chess Store</div>
   	<div class="project-info">
   		Spring 2017 | Application Design and Development | <a href="https://github.com/emilyporat/ChessStore">Code</a>
@@ -52,9 +54,8 @@
 	  		<img class="product-pic" src="pics/chess/cart.jpeg" style="width: 65%">
 	  		<div class="caption">Users can easily add or remove items from their shopping cart.</div>
 	  	</div>
-
-	  	<img src="pics/arrow.png" id="arrow-up" onclick="slideUp()">
 	 </div>
+	 </meta>
   </body>
 
   <script src="js/general.js"></script>
