down arrow scrolls down right amount

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
   <body>
     <meta name="viewport" content="width=device-width">
-      <div id="my-nav" class="nav-transparent">    
+      <div id="my-nav" class="nav-colored">    
         <div class="nav-item" onclick="slideToSection('home')">HOME</div>
         <div class="nav-item" onclick="slideToSection('about')">ABOUT</div>
         <div class="nav-item" onclick="slideToSection('projects-title')">PROJECTS</div>
