added favicon to all pages

--- a/chutzpow.html
+++ b/chutzpow.html
@@ -5,6 +5,7 @@
     <title>Chutz-Pow!</title>
     <link rel="stylesheet" type="text/css" href="styles/global.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
+    <link rel="shortcut icon" type="image/x-icon" href="pics/favicon.ico" />
   </head>
 
   <body>
