--- a/index.html
+++ b/index.html
@@ -12,6 +12,15 @@
     <link rel="stylesheet" type="text/css" href="styles/projects.css">
     <link rel="stylesheet" type="text/css" href="styles/contact.css">
     <link rel="shortcut icon" type="image/x-icon" href="pics/favicon.ico" />
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-119412150-1"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+
+      gtag('config', 'UA-119412150-1');
+    </script>
   </head>
 
   <body>
