--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 
   <head>
-    <title>Home</title>
+    <title>Emily Porat | Portfolio</title>
     <meta name="description" content="Emily Porat's Portfolio | UX/UI | Development | Technology Consulting | Emily Porat is a rising senior at Carnegie Mellon University studying Information Systems and Human-Computer Interaction">
     <meta name="keywords" content="Emily Porat, Carnegie Mellon University, Emily Porat CMU, Emily Porat Carnegie Mellon, Emily Porat Carnegie Mellon University, Porat, Emily CMU, Porat CMU">
     <meta name="author" content="Emily Porat">
