added mobile nav menu

--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
     <link rel="stylesheet" type="text/css" href="styles/projects.css">
     <link rel="stylesheet" type="text/css" href="styles/contact.css">
     <link rel="shortcut icon" type="image/x-icon" href="pics/favicon.ico" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <!-- Global site tag (gtag.js) - Google Analytics -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=UA-119412150-1"></script>
     <script>
@@ -34,7 +35,10 @@
         <div class="nav-item" onclick="slideToSection('projects-title')">PROJECTS</div>
         <div class="nav-item" onclick="slideToSection('contact')">CONTACT</div>
         <div class="nav-item"><a href="pics/resume.pdf" target="_blank">RESUME</a></div>
+        <!-- <i id="hamburger" class="fa fa-bars" onclick="toggleNav()"></i> -->
+        <div id="hamburger" class="fa fa-bars" onclick="toggleNav()"></div>
       </div>
+
       <div id="home">
         <div id="square"></div>
         <img src="pics/background.png" id="home-background">
