changed home page intro

--- a/index.html
+++ b/index.html
@@ -40,13 +40,11 @@
       </div>
 
       <div id="home">
-        <div id="square"></div>
-        <img src="pics/background.png" id="home-background">
+        <!-- <div id="square"></div> -->
+        <!-- <img src="pics/background.png" id="home-background"> -->
         <div id="home-text">
-          <div id="home-text-title">Hello!</div>
-          <div id="home-text-description">
-            My name is Emily Porat, and I care about improving people’s lives with technology.
-          </div>
+          <div id="home-text-title">Hello! I'm Emily Porat.</div>
+          <h1 id="home-text-description">I care about improving people’s lives with technology.</h1>
         </div>
         <img src="pics/arrow.png" id="arrow-down" onclick="slideDown()">
       </div>
